  * Support for DOGS102, ST7920, SSD1306
  * Most graphics primitives are implemented
2016-05-15	v2.0.3 	olikraus@gmail.com
  * Support for Adafruit FeatherWing 128x32 OLED
  * Added Wire.h support (I2C for SSD1306)
  * Successfully tested with Adafruit ESP8266 Feather Board (HW+SW I2C)
  * Successfully tested with Adafruit Feather M0 Basic Board (HW+SW I2C)
2016-06-12	v2.0.4 	olikraus@gmail.com
  * Support for ST7565
2016-06-25	v2.0.6 	olikraus@gmail.com
  * User interface functions
  * Little Rook Chess ported
  * ST7920 HW and SW SPI
2016-06-26	v2.0.7	  olikraus@gmail.com
  * drawLine
  * GraphicsTest Example
2016-08-09	v2.1.5	  olikraus@gmail.com
  * T6963 Support
  * Experimental Support for SSD1322 256x64
  * A2 Thermoprinter Support
  * Added several fonts from http://int10h.org/oldschool-pc-fonts/
  * Added Arabic, Greek and Cyrillic fonts.
  * Code cleanup (assert, spi modes, void * warning)
2016-08-17	v2.2.7	  olikraus@gmail.com
  * U8x8: Upscale by 2 (Issue 41)
  * Fixed SSD1306 I2C procedures (mirror pixel in last tile column, issue 44)
  * Experimental support für mini12864 (pull request)
  * Use beginTransaction for SPI. This requires Arduino 1.6.0
2016-08-18	v2.3.2	  olikraus@gmail.com
 * MINI12874; Fixed HW Flip Mode (pull request 49)
 * Fixed ST7920 HW SPI with very fast uC, issue 50
 * Improved HW SPI for SH1106 and SSD1306 displays
 * Fixed issue with missing fonts
2016-08-21	v2.4.1	olikraus@gmail.com
 * Fixed HW SPI Modes (issue 52)
2016-10-01	v2.5.2	 olikraus@gmail.com
 * Added crox fonts (issue 57)
 * Support for RA8835 (issue 45)
 * Added support for SSD1322 and SSD1325
 * Added DrawXBMP (AVR: Assume bitmap in PROGMEM)
 * Added japanese fonts (issue 65)
2016-xx-xx	v2.6.x	 olikraus@gmail.com
 * Added support for UC1610 (DOGXL160)
 * Use Wire.setClock() for improved HW I2C performance (issue 79). This
    requires Arduino IDE 1.6.0 or higher.
 * Added Thai Fonts (issue 73)
 * Added support for "\n" in the print function for u8x8 (issue 74)
 